# NeoSekaiEngine

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.circleci/: config.yml
.github/workflows/: build_test.yaml
doc/: CMakeLists.txt
doc/diagrams/lifecycle/: lifecycle.dot
doc/pages/: lifecycle.dox
engine/: CMakeLists.txt
engine/cmake/: platform_config.cmake  set_include_all_header.cmake  set_version_header.cmake
engine/config/: SekaiEngine.h.cmake  version.h.cmake
engine/include/: SekaiEngine.h  Test.h
engine/include/SekaiEngine/: Application.h  BaseType.h  EntryPoint.h  Input.h  Timer.h  Window.h
engine/include/SekaiEngine/Audio/: Device.h  MusicStream.h  Sound.h
engine/include/SekaiEngine/Event/: ApplicationEvent.h  Event.h  WindowEvent.h
engine/include/SekaiEngine/Layer/: Layer.h  LayerStack.h
engine/include/SekaiEngine/Math/: Collision.h  Utility.h  Vector.h
engine/include/SekaiEngine/Object/: CircleUI.h  GroupUI.h  RectangleUI.h  TextureUI.h  UI.h
engine/include/SekaiEngine/Render/: Camera.h  Color.h  Font.h  RenderCommand.h  RenderProperties.h  Renderer.h  RendererAPI.h  Texture.h
engine/include/SekaiEngine/Render/Params/: CircleRenderParams.h  RectangleRenderParams.h  RenderParams.h  TextRenderParams.h  TextureRenderParams.h
engine/include/SekaiEngine/Shape/: Circle.h  Rectangle.h  Shape.h
engine/include/wrapper/raylib/: Font.h  Parser.h  Texture.h  Window.h
engine/src/: Application.cpp  Test.cpp
engine/src/SekaiEngine/: Application.cpp  Timer.cpp
engine/src/SekaiEngine/Audio/: MusicStream.cpp  Sound.cpp
engine/src/SekaiEngine/Event/: ApplicationEvent.cpp  Event.cpp
engine/src/SekaiEngine/Layer/: Layer.cpp  LayerStack.cpp
engine/src/SekaiEngine/Math/: Collision.cpp  Utility.cpp  Vector.cpp
engine/src/SekaiEngine/Object/: CircleUI.cpp  GroupUI.cpp  RectangleUI.cpp  TextureUI.cpp  UI.cpp
engine/src/SekaiEngine/Render/: RenderCommand.cpp  RenderProperties.cpp  Renderer.cpp
engine/src/wrapper/raylib/: AudioDevice.cpp  Camera.cpp  Font.cpp  Input.cpp  MainLoop.cpp  MusicStream.cpp  RendererAPI.cpp  Sound.cpp  Window.cpp
examples/: CMakeLists.txt
examples/BasicWindow/: CMakeLists.txt
examples/BasicWindow/src/: BasicWindow.cpp
examples/InputKeys/: CMakeLists.txt
examples/InputKeys/src/: InputKey.cpp
examples/InputMouse/: CMakeLists.txt
examples/InputMouse/src/: InputMouse.cpp
examples/Shapes/: CMakeLists.txt
examples/Shapes/src/: Shapes.cpp
examples/Texture/: CMakeLists.txt
examples/Texture/src/: Texture.cpp
sandbox/: CMakeLists.txt
sandbox/src/: Application.cpp  Sandbox.cpp
scripts/pre-installer/linux/redhat/: preinstaller.sh
scripts/tool/: tool.py
test/: CMakeLists.txt
test/src/: collision.cpp  color.cpp  timestep.cpp  vector.cpp
