cmake_minimum_required(VERSION 3.0)
project(SekaiEngine)

option(RUN_TEST "RUN_TEST" OFF)
option(BUILD_DOC "Build doc using Doxygen" OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)

add_subdirectory(./engine)
add_subdirectory(./sandbox)
if(${RUN_TEST})
    enable_testing()
    add_subdirectory(./test)
endif()

if(${BUILD_DOC})
    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  ")
    endif()
    find_package(Doxygen REQUIRED dot)
    if(${DOXYGEN_FOUND})
        message(STATUS "Doxygen founded, version=${DOXYGEN_VERSION}")
        set(DOXYGEN_GENERATE_HTML TRUE)
        doxygen_add_docs(EngineDoc ${CMAKE_SOURCE_DIR}/engine/include COMMENT "Generate NeoSekaiEngine document" )
    endif()
endif()